src/test/run-pass/unique-pat.rs
fn simple() {
    match ~true {
      ~true => { }
      _ => { fail; }
    }
}

fn main() {
    simple();
}